# OATHYARD

./: .gitattributes  .gitignore  ACCEPTANCE_MAP.md  AGENTS.md  Cargo.toml  LICENSE  README.md
assets_runtime/: README.md
assets_src/: provenance.md
content/: high_fidelity_capture_slots.json  native_visual_evidence_manifest.json  oathyard_content.manifest
crates/oathyard_renderer/: Cargo.toml
crates/oathyard_renderer/src/: main.rs  verdict_ring.wgsl
docs/: DESIGN_KB.md  oathyard-artifact-inventory.md
spikes/: README.md
src/: accessibility_artifacts.rs  animation_state_machine.rs  audio_artifacts.rs  boundary_taxonomy.rs  content.rs  format_utils.rs  freeze_pipeline.rs  freeze_status.rs  gamepad_smoke.rs  goal_command.rs  hud_truth.rs  input_artifacts.rs  json.rs  lib.rs  local_game.rs  material_artifacts.rs  native_hud_menu_flow.rs  replay_bundle.rs  settings_artifacts.rs  sha256.rs
tests/: boundary_taxonomy_tests.rs  freeze_gate_enforcement_tests.rs  freeze_status_tests.rs  goal_command_tests.rs  hud_truth_tests.rs  native_hud_menu_flow_tests.rs  oathyard_tests.rs  unit057_working_game_tests.rs  unit058_visual_qa_tests.rs  unit081_renderer_contract_tests.rs  unreal_truth_bridge_tests.rs
tools/: accessibility.sh  ai_duel.sh  ai_planner_audit.sh  ai_sweep.sh  animation_state_machine.sh  arena_environment_captures.sh  artifact_root_selection.py  asset_budget_audit.sh  asset_pipeline.py  asset_provenance_audit.sh  asset_visual_atlas.sh  audio_device_smoke.sh  audio_mixer.sh  audio_target_audit.sh  audio_vfx_render.sh  audit_3d_runtime.sh  audit_readiness.sh  (+79 more)
(+191 files in other folders)
