[package]
name = "oathyard-renderer"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
description = "OATHYARD production native wgpu/Vulkan 3D renderer"
license-file = "../../LICENSE"

[[bin]]
name = "oathyard-native-renderer"
path = "src/main.rs"

[dependencies]
bevy_ecs = "0.19.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
png = "0.18.1"
pollster = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
wgpu = "29.0.3"
